Closed
Bug 459956
Opened 17 years ago
Closed 17 years ago
Outlook (Express) cards in address book don't persist changes
Categories
(MailNews Core :: Address Book, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Thunderbird 3.0b1
People
(Reporter: sgautherie, Assigned: jcranmer)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
|
4.16 KB,
patch
|
standard8
:
review+
neil
:
superreview+
|
Details | Diff | Splinter Review |
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.1b2pre) Gecko/20081014 Shredder/3.0b1pre] (nightly) (W2Ksp4)
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.1b2pre) Gecko/20081014 SeaMonkey/2.0a2pre] (nightly) (W2Ksp4)
(I noticed this some time ago while working on some other bug.)
With
{
pref("ldap_2.servers.oe.uri", "moz-aboutlookdirectory://oe/");
pref("ldap_2.servers.oe.description", "chrome://messenger/locale/addressbook/addressBook.properties");
pref("ldap_2.servers.oe.dirType", 3);
}
(NB: which SeaMonkey(/Windows) have by default.)
It is possible to edit an "O.E." card, and the display is updated,
but the actual changes are forgotten as soon as another a.b. is selected.
Suggestions:
If the changes can be saved to the Windows address book, do it.
Otherwise, the cards should be in some kind of "read-only" mode.
In the later case, I don't know if it could be possible to launch the Windows application to edit them ?
Comment 1•17 years ago
|
||
Neil will probably have the best idea about this.
Comment 2•17 years ago
|
||
Hmm... nsAbOutlookDirectory seems to have a ModifyCard method, or is there something else that needs to be done?
| Assignee | ||
Comment 3•17 years ago
|
||
This appears to be a regression from bug 360777, where (it seems) Mark copied the ModifyCard from nsAbOutlookCard without any changes (or with minor changes).
I discovered this trying to get rid of nsAbOutlookCard (in favor of non-specific nsIAbCard) and wondering why a certain function (to get the MAPI entry from a card) wasn't being called as often as it should have been. If you look in nsAbOutlookDirectory::ModifyCard, you'll note that it calls on *mMapiData... of nsAbOutlookDirectory. It's setting the properties on the wrong object.
I'll try to get this in before b1.
Assignee: nobody → Pidgeot18
Severity: minor → normal
Status: NEW → ASSIGNED
Keywords: polish → regression
Summary: Outlook (Express) cards in address book should not be editable, or changes should persist → Outlook (Express) cards in address book don't persist changes
Target Milestone: --- → Thunderbird 3.0b1
| Assignee | ||
Comment 4•17 years ago
|
||
I tested this on Vista with Windows Contacts. At the very least, cards work; I don't know if mailing lists work, but they most likely follow regular cards in how they work since I haven't touched mailing list stuff yet.
Attachment #348021 -
Flags: superreview?(neil)
Attachment #348021 -
Flags: review?(bugzilla)
Updated•17 years ago
|
Attachment #348021 -
Flags: superreview?(neil) → superreview+
Comment 5•17 years ago
|
||
Comment on attachment 348021 [details] [diff] [review]
Patch that WFM on Vista
WFM with XP's Windows Address Book.
Comment 6•17 years ago
|
||
Comment on attachment 348021 [details] [diff] [review]
Patch that WFM on Vista
I haven't tested this, but given the fact you and Neil have, it seems safe enough, and the changes look reasonable. r=me.
Attachment #348021 -
Flags: review?(bugzilla) → review+
| Assignee | ||
Comment 7•17 years ago
|
||
Pushed as changset 1114:0079f40161ba.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 8•17 years ago
|
||
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.1b2pre) Gecko/20081115 SeaMonkey/2.0a2pre] (nightly) (W2Ksp4)
V.Fixed
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•