Bug 459956 - Outlook address book cards don't persist changes r=standard8, sr=neil